--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "crypto-js": "^4.1.1",
     "elliptic": "^6.5.4",
+    "express": "^4.18.2",
     "fastify": "^4.0.3",
     "ws": "^8.8.0"
   }
